# shrine-and-even-sky

./: CHANGELOG.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task-template.md
.github/workflows/: main.yml  push.yml
docs/source/: conf.py
src/: main.py
src/cheese_playground/: main.py
src/cheese_playground/mini_games/: categories.json
src/discord_bot/: main.py
src/discord_bot/commands/: owoify.py
src/discord_bot/helpers/: command_logging.py
src/file_handling/: file_writers.py
src/frontend/: main.py
src/mini_games/: categories.schema.json  simple_classics.py
tests/: __init__.py
