[tool.poetry]
name = "shrine-and-even-sky"
version = "0.1.0"
description = "A fun little project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "shrine_and_even_sky"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
Sphinx = "^7.2.6"
requests = "^2.31.0"
attrs = "^23.1.0"
pytest = "^7.4.2 "


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
